# dl-translator

./: .env.example  .gitignore  CLAUDE.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.claude/skills/translate-file/: README.md  SKILL.md
.claude/skills/translate-file/references/: supported-formats.md
.claude/skills/translate-file/scripts/: translate.py
.plan/: document-translator-tool-plan.md
src/dl_translator/: __init__.py  __main__.py  booklet.py  cli.py  discovery.py  gemini_fix.py  md_translate.py  ocr_cleanup.py  ocr_engine.py  output_docx.py  paragraph_join.py  pipeline.py  translate.py
src/dl_translator/extractors/: __init__.py  common.py  docx.py  image.py  md.py  pdf.py
tests/: test_gemini_fix.py  test_md_translate.py  test_output_docx.py
